--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
           <div>
             <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-200">
-              Le chargeur magnétique est-il sécurisé ?
+              Le chargeur magnétique sans fil est-il sécurisé ?
             </h3>
             <p class="mt-2 text-gray-600 dark:text-gray-400">
               Oui, notre chargeur est équipé de protections de sécurité pour
