--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white"
           >
             Le leader des chargeurs
-            <span class="text-blue-600">Magnétique</span>
+            <span class="text-blue-600">Chargeur magnétique sans fil</span>
           </h1>
           <p class="mt-3 text-lg text-gray-800 dark:text-gray-400">
             Profitez d'une expérience de charge sans stress avec notre chargeur
