--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <h1
             class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white"
           >
-            Le leader des chargeurs
-            <span class="text-blue-600">Chargeur magnétique sans fil</span>
+            Le leader des 
+            <span class="text-blue-600">Chargeurs magnétique sans fil</span>
           </h1>
           <p class="mt-3 text-lg text-gray-800 dark:text-gray-400">
             Profitez d'une expérience de charge sans stress avec notre chargeur
