--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./images/logo2.png" />
     <link rel="stylesheet" href="output.css" />
     <title>Smart Energy</title>
   </head>
   <body>
     <!-- Header -->
     <header
-      class="sticky top-0 inset-x-0 flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white border-b border-gray-200 text-sm py-3 sm:py-0 dark:bg-gray-800 dark:border-gray-700"
+      class="sticky top-0 inset-x-0 flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white border-b border-gray-200 text-sm py-3 sm:py-0"
     >
       <nav
         class="relative max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8"
         aria-label="Global"
       >
         <div class="flex items-center justify-between">
-          <a
-            class="flex-none text-xl font-semibold dark:text-white"
-            href="#"
-            aria-label="Brand"
-            >Smart Energy</a
-          >
+          <a class="flex items-center" href="#" aria-label="Brand">
+            <img src="./images/logo.png" alt="" class="block w-14 h-14" />
+            <p class="flex-none text-xl font-semibold">Smart Energy</p>
+          </a>
           <div class="sm:hidden">
             <button
               type="button"
-              class="hs-collapse-toggle p-2 inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:bg-slate-900 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-gray-400 dark:hover:text-white dark:focus:ring-offset-gray-800"
+              class="hs-collapse-toggle p-2 inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm"
               data-hs-collapse="#navbar-collapse-with-animation"
               aria-controls="navbar-collapse-with-animation"
               aria-label="Toggle navigation"
@@ -65,28 +64,28 @@
             class="flex flex-col gap-y-4 gap-x-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:gap-y-0 sm:gap-x-7 sm:mt-0 sm:pl-7"
           >
             <a
-              class="font-medium text-blue-600 sm:py-6 dark:text-blue-500"
+              class="font-medium text-blue-600 sm:py-6"
               href="#"
               aria-current="page"
               >Acceuil</a
             >
             <a
-              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6 dark:text-gray-400 dark:hover:text-gray-500"
+              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6"
               href="#questions"
               >Questions</a
             >
             <a
-              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6 dark:text-gray-400 dark:hover:text-gray-500"
+              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6"
               href="#produits"
               >Produits</a
             >
             <a
-              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6 dark:text-gray-400 dark:hover:text-gray-500"
+              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6"
               href="#contact"
               >Contacter nous</a
             >
             <a
-              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6 dark:text-gray-400 dark:hover:text-gray-500"
+              class="font-medium text-gray-500 hover:text-gray-400 sm:py-6"
               href="#entreprise"
               >Entreprise</a
             >
@@ -98,15 +97,15 @@
     <!-- Hero -->
     <div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
       <!-- Grid -->
-      <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
-        <div>
+      <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20">
+        <div class="md:pt-16">
           <h1
-            class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white"
+            class="block text-3xl mt-4 font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight"
           >
-            Le leader des 
-            <span class="text-blue-600">Chargeurs magnétique sans fil</span>
+            Le leader des
+            <span class="text-amber-700">Chargeurs magnétique sans fil</span>
           </h1>
-          <p class="mt-3 text-lg text-gray-800 dark:text-gray-400">
+          <p class="mt-3 text-lg text-gray-800">
             Profitez d'une expérience de charge sans stress avec notre chargeur
             magnétique de qualité supérieure.
           </p>
@@ -114,7 +113,7 @@
           <!-- Buttons -->
           <div class="mt-7 grid gap-3 w-full sm:inline-flex">
             <a
-              class="inline-flex justify-center items-center gap-x-3 text-center bg-blue-600 hover:bg-blue-700 border border-transparent text-sm lg:text-base text-white font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition py-3 px-4 dark:focus:ring-offset-gray-800"
+              class="inline-flex justify-center items-center gap-x-3 text-center bg-blue-600 hover:bg-blue-700 border border-transparent text-sm lg:text-base text-white font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition py-3 px-4"
               href="#produits"
             >
               Découvrez nos produits
@@ -141,7 +140,7 @@
         <div class="relative sm:ml-4">
           <img class="w-full" src="./images/img6.jpg" alt="Image Description" />
           <div
-            class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 w-full h-full rounded-md mt-4 -mb-4 mr-4 -ml-4 lg:mt-6 lg:-mb-6 lg:mr-6 lg:-ml-6 dark:from-slate-800 dark:via-slate-900/0 dark:to-slate-900/0"
+            class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 w-full h-full sm:rounded-md mt-4 -mb-4 mr-4 -ml-4 lg:mt-6 lg:-mb-6 lg:mr-6 lg:-ml-6"
           ></div>
         </div>
         <!-- End Col -->
@@ -157,7 +156,7 @@
       <!-- Title -->
       <div class="max-w-2xl mx-auto text-center mb-10 lg:mb-14">
         <h2
-          class="text-2xl font-bold md:text-3xl md:leading-tight text-gray-800 dark:text-gray-200"
+          class="text-2xl font-bold md:text-3xl md:leading-tight text-gray-800"
         >
           Questions fréquemment posées
         </h2>
@@ -168,10 +167,10 @@
         <!-- Grid -->
         <div class="grid sm:grid-cols-2 gap-6 md:gap-12">
           <div>
-            <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-200">
+            <h3 class="text-lg font-semibold text-gray-800">
               Est-ce que le chargeur est compatible avec tous les téléphones ?
             </h3>
-            <p class="mt-2 text-gray-600 dark:text-gray-400">
+            <p class="mt-2 text-gray-600">
               Oui, il est compatible avec tous les téléphones qui supportent la
               charge sans fil Qi.
             </p>
@@ -179,10 +178,10 @@
           <!-- End Col -->
 
           <div>
-            <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-200">
+            <h3 class="text-lg font-semibold text-gray-800">
               Comment fonctionne le chargeur magnétique ?
             </h3>
-            <p class="mt-2 text-gray-600 dark:text-gray-400">
+            <p class="mt-2 text-gray-600">
               Il utilise un champ magnétique pour recharger votre téléphone sans
               fil.
             </p>
@@ -190,11 +189,11 @@
           <!-- End Col -->
 
           <div>
-            <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-200">
+            <h3 class="text-lg font-semibold text-gray-800">
               Combien de temps faut-il pour recharger un téléphone complètement
               ?
             </h3>
-            <p class="mt-2 text-gray-600 dark:text-gray-400">
+            <p class="mt-2 text-gray-600">
               Cela dépend de la capacité de la batterie de votre téléphone, mais
               notre chargeur offre une charge rapide et efficace.
             </p>
@@ -202,10 +201,10 @@
           <!-- End Col -->
 
           <div>
-            <h3 class="text-lg font-semibold text-gray-800 dark:text-gray-200">
-              Le chargeur magnétique sans fil est-il sécurisé ?
+            <h3 class="text-lg font-semibold text-gray-800">
+              Le chargeur magnétique est-il sécurisé ?
             </h3>
-            <p class="mt-2 text-gray-600 dark:text-gray-400">
+            <p class="mt-2 text-gray-600">
               Oui, notre chargeur est équipé de protections de sécurité pour
               éviter la surchauffe et les courts-circuits.
             </p>
@@ -224,7 +223,7 @@
       <!-- Title -->
       <div class="max-w-2xl mx-auto text-center mb-5 lg:mb-10">
         <h2
-          class="text-2xl font-bold md:text-3xl md:leading-tight text-gray-800 dark:text-gray-200"
+          class="text-2xl font-bold md:text-3xl md:leading-tight text-gray-800"
         >
           À propos de Smart Energy
         </h2>
@@ -247,11 +246,11 @@
     <div class="max-w-5xl px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
       <div class="text-center mb-10" id="produits">
         <h2
-          class="text-2xl mb-4 font-bold md:text-3xl md:leading-tight text-gray-800 dark:text-gray-200"
+          class="text-2xl mb-4 font-bold md:text-3xl md:leading-tight text-gray-800"
         >
           Nos produits
         </h2>
-        <p class="text-lg font-semibold text-center text-gray-800">
+        <p class="mt-2 text-lg font-semibold text-gray-600">
           Découvrez notre gamme de chargeurs magnétiques sans fil.
         </p>
       </div>
@@ -317,7 +316,7 @@
             <!-- Title -->
             <div class="space-y-2 md:space-y-4">
               <h2
-                class="font-bold text-3xl lg:text-4xl text-gray-800 dark:text-gray-200"
+                class="font-bold pt-4 text-2xl sm:text-3xl lg:text-4xl text-gray-800"
               >
                 Les avantages de nos chargeurs magnétiques
               </h2>
@@ -334,7 +333,7 @@
               <li class="flex space-x-3">
                 <!-- Solid Check -->
                 <svg
-                  class="flex-shrink-0 h-6 w-6 text-blue-600 dark:text-blue-500"
+                  class="flex-shrink-0 h-6 w-6 text-blue-600"
                   width="16"
                   height="16"
                   viewBox="0 0 16 16"
@@ -361,7 +360,7 @@
               <li class="flex space-x-3">
                 <!-- Solid Check -->
                 <svg
-                  class="flex-shrink-0 h-6 w-6 text-blue-600 dark:text-blue-500"
+                  class="flex-shrink-0 h-6 w-6 text-blue-600"
                   width="16"
                   height="16"
                   viewBox="0 0 16 16"
@@ -388,7 +387,7 @@
               <li class="flex space-x-3">
                 <!-- Solid Check -->
                 <svg
-                  class="flex-shrink-0 h-6 w-6 text-blue-600 dark:text-blue-500"
+                  class="flex-shrink-0 h-6 w-6 text-blue-600"
                   width="16"
                   height="16"
                   viewBox="0 0 16 16"
@@ -428,7 +427,7 @@
       <div class="mx-auto max-w-2xl">
         <div class="text-center">
           <h2
-            class="text-xl text-gray-800 font-bold sm:text-3xl dark:text-white"
+            class="text-2xl mb-4 font-bold md:text-3xl md:leading-tight text-gray-800"
           >
             Contacter nous
           </h2>
@@ -436,41 +435,41 @@
 
         <!-- Card -->
         <div
-          class="mt-5 p-4 relative z-10 bg-white border rounded-xl sm:mt-10 md:p-10 dark:bg-gray-800 dark:border-gray-700"
+          class="mt-5 p-4 relative z-10 bg-white border rounded-xl sm:mt-10 md:p-10"
         >
           <form>
             <div class="mb-4 sm:mb-8">
               <label
                 for="hs-feedback-post-comment-name-1"
-                class="block mb-2 text-sm font-medium dark:text-white"
+                class="block mb-2 text-sm font-medium"
                 >Nom et prénom</label
               >
               <input
                 type="text"
                 id="hs-feedback-post-comment-name-1"
-                class="py-3 px-4 block w-full border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 sm:p-4 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400"
-                placeholder="Full name"
+                class="py-3 px-4 block w-full outline-none border border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-red-500 sm:p-4"
+                placeholder="votre nom complet"
               />
             </div>
 
             <div class="mb-4 sm:mb-8">
               <label
                 for="hs-feedback-post-comment-email-1"
-                class="block mb-2 text-sm font-medium dark:text-white"
+                class="block mb-2 text-sm font-medium"
                 >Addresse email</label
               >
               <input
                 type="email"
                 id="hs-feedback-post-comment-email-1"
-                class="py-3 px-4 block w-full border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 sm:p-4 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400"
-                placeholder="Email address"
+                class="py-3 px-4 block w-full border outline-none border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 sm:p-4"
+                placeholder="votre address email"
               />
             </div>
 
             <div>
               <label
                 for="hs-feedback-post-comment-textarea-1"
-                class="block mb-2 text-sm font-medium dark:text-white"
+                class="block mb-2 text-sm font-medium"
                 >Message</label
               >
               <div class="mt-1">
@@ -478,8 +477,8 @@
                   id="hs-feedback-post-comment-textarea-1"
                   name="hs-feedback-post-comment-textarea-1"
                   rows="3"
-                  class="py-3 px-4 block w-full border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 sm:p-4 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400"
-                  placeholder="Leave your comment here..."
+                  class="py-3 px-4 block w-full border outline-none border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 sm:p-4"
+                  placeholder="saiser votre message..."
                 ></textarea>
               </div>
             </div>
@@ -487,7 +486,7 @@
             <div class="mt-6 grid">
               <button
                 type="submit"
-                class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-all dark:focus:ring-offset-gray-800"
+                class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-all"
               >
                 Envoyer
               </button>
@@ -506,11 +505,13 @@
       <div class="text-center">
         <div>
           <a
-            class="flex-none text-xl font-semibold text-black dark:text-white"
+            class="flex items-center justify-center"
             href="#"
             aria-label="Brand"
-            >Smart Energy</a
           >
+            <img src="./images/logo.png" alt="" class="block w-14 h-14" />
+            <p class="flex-none text-xl font-semibold">Smart Energy</p>
+          </a>
         </div>
         <!-- End Col -->
 
@@ -524,7 +525,7 @@
         <!-- Social Brands -->
         <div class="mt-3 space-x-2">
           <a
-            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition dark:text-gray-500 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition"
             href="#"
           >
             <svg
@@ -541,7 +542,7 @@
             </svg>
           </a>
           <a
-            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition dark:text-gray-500 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition"
             href="#"
           >
             <svg
@@ -558,7 +559,7 @@
             </svg>
           </a>
           <a
-            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition dark:text-gray-500 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition"
             href="#"
           >
             <svg
@@ -575,7 +576,7 @@
             </svg>
           </a>
           <a
-            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition dark:text-gray-500 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+            class="inline-flex justify-center items-center w-10 h-10 text-center text-gray-500 hover:bg-gray-100 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white transition"
             href="#"
           >
             <svg
@@ -596,5 +597,7 @@
       </div>
       <!-- End Grid -->
     </footer>
+
+    <script src="./preline.js"></script>
   </body>
 </html>
